fix map z-index

--- a/realestate-client/src/app/core/ui/create-post/add-re/add-re.component.scss
+++ b/realestate-client/src/app/core/ui/create-post/add-re/add-re.component.scss
@@ -5,3 +5,19 @@ td{
    padding-left: 1rem;
    padding-right: 1rem;
 }
+
+.map-container {
+    z-index: 10;
+    position: relative;
+    max-width: 100%;
+    height:100vh;
+    .map-frame {
+      position: relative;
+      height: inherit; 
+      width: inherit;
+      #map {
+        height: 99%; 
+        z-index: 10;
+      }
+    }
+  }
