--- a/realestate-client/src/app/core/ui/map/map.component.scss
+++ b/realestate-client/src/app/core/ui/map/map.component.scss
@@ -8,7 +8,8 @@
       height: inherit; 
       width: inherit;
       #map {
-        height: 99%;  
+        height: 99%; 
+        z-index: 10;
       }
     }
   }
